[gd_scene load_steps=2 format=3 uid="uid://cvvoqn2fmarvw"]

[ext_resource type="Script" path="res://Scripts/LevelNumberSelectButton.gd" id="1_kkceh"]

[node name="LevelNumberSelectButton" type="Button"]
custom_minimum_size = Vector2(96, 96)
theme_override_font_sizes/font_size = 32
script = ExtResource("1_kkceh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelNumberLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CompletionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Complete"
horizontal_alignment = 1
vertical_alignment = 1
